--- a/public/styles/faq.css
+++ b/public/styles/faq.css
@@ -27,7 +27,7 @@
   outline: none;
   font-size: var(--font-size-md);
   font-family: var(--font-brand);
-  font-weight: 500;
+  font-weight: var(--weight-title);
   border-radius: 10px;
 }
 
