--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -2,6 +2,7 @@
   --color-text: var(--color-linen);
   --color-link-text: var(--color-linen);
   --color-link-underline: var(--color-peach);
+  --color-background: var(--color-midnight);
 }
 
 .header-navlink__home {
